Create header file with prototype of s_calculation()

--- a/lab08/prj/ModulesHrebeniuk/ModulesHrebeniuk.cbp
+++ b/lab08/prj/ModulesHrebeniuk/ModulesHrebeniuk.cbp
@@ -34,7 +34,10 @@
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="main.c">
+		<Unit filename="../ModulesHrebeniuk.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="main.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
